# QMLModuleExample

./: CMakeLists.txt  LICENSE  README.md
ApplicationExample/: CMakeLists.txt  main.cpp  main.qml
ModuleExample/: CMakeLists.txt  Example.qml
